# pedes_hog_detection

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
src/: pedestrian_detection_node.cpp
