<?xml version="1.0"?>
<package>
  <name>pedes_hog_detection</name>
  <version>0.1.0</version>
  <description>pedestrian_detection is a ROS node for visualizing pedestrian detection, coded by ROAHM Lab, University of Michigan, 2016
  </description>
<maintainer email="fanbu@umich.edu">ROAHM LABS</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
  </export>
</package>
